err/products.eventregistration.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/EventRegistration'...
Listing './lib/python3.5/site-packages/Products/EventRegistration/profiles'...
Listing './lib/python3.5/site-packages/Products/EventRegistration/profiles/default'...
Listing './lib/python3.5/site-packages/Products/EventRegistration/profiles/default/types'...
Listing './lib/python3.5/site-packages/Products/EventRegistration/profiles/default/workflows'...
Listing './lib/python3.5/site-packages/Products/EventRegistration/profiles/default/workflows/event_workflow'...
Listing './lib/python3.5/site-packages/Products/EventRegistration/profiles/default/workflows/registrant_workflow'...
Listing './lib/python3.5/site-packages/Products/EventRegistration/skins'...
Listing './lib/python3.5/site-packages/Products/EventRegistration/skins/event_registration'...
Compiling './lib/python3.5/site-packages/Products/EventRegistration/skins/event_registration/allRegEmail.py'...
***   File "./lib/python3.5/site-packages/Products/EventRegistration/skins/event_registration/allRegEmail.py", line 2
    return ','.join([reg.email for reg in context.getFolderContents() if getattr(reg,'email','')!='']);
                                                                                                      ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products.EventRegistration-1.0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
